--- a/index.html
+++ b/index.html
@@ -47,29 +47,27 @@
           </section>
           <section>
             <h3>Fundamentos</h3>
-            <ul>
-              <li>Instalación</li>
-              <li>Plantilla</li>
-              <li>Directivas</li>
-              <li>Propiedades Computadas Y Observadores</li>
-              <li>Manejos de Estilos y Clases</li>
-              <li>Bloque Condicional</li>
-              <li>Listas</li>
-              <li>Eventos</li>
-              <li>Formularios</li>
-            </ul>
+            <p>Instalación, Plantilla, Directivas, Propiedades Computadas, Métodos, Manejos de Estilos/Clases, Bloque Condicional, Listas, Eventos, Formularios.</p>
           </section>
           <section>
             <h3>Componentes</h3>
+            <p>Introducción, Crear Componentes, Herramienta de Desarrollo de Vue, Componentes para Proyecto, Componente Hijos, Scoped, Pasando Datos entre Componentes, Validar Datos, Eventos, Comunicación mediante el Evento Bus, Pasando Datos entre Eventos, Slots, Componentes Dinámicos, Keeping, Ciclo de Vida.</p>
           </section>
           <section>
             <h3>Vue Router</h3>
+            <p>Instalación, Registrar Rutas, Mostrando Rutas, Rutas Dinámicas, Rutas Anidadas, Rutas Nombradas, Redirecciones y Alias, Pasando Props, Historial HTML5</p>
           </section>
           <section>
             <h3>Axios</h3>
+            <ul>
+              <li>¿Que és?</li>
+              <li>Instalación</li>
+              <li>Peticiones Ajax</li>
+            </ul>
           </section>
           <section>
             <h3>Mini Proyecto</h3>
+            <p>VueCine(Api OMDB)</p>
           </section>
         </section>
       </div>
