--- a/index.html
+++ b/index.html
@@ -70,6 +70,31 @@
             <p>VueCine(Api OMDB)</p>
           </section>
         </section>
+        <section>
+          <h3><a href="https://vuejs.org/" target="_blank">¿Qué es VueJS?</a></h3>
+          <p>Es un framework progresivo de javascript para construir interfaces web interactivas.</p>
+        </section>
+        <section>
+          <h3>Creador de Vue</h3>
+          <h5>Evan You</h5><img src="/img/evan-you.jpg" alt="Evan You" wight="200" height="200"/>
+        </section>
+        <section>
+          <h3>Historia</h3>
+          <p>Evan You que trabajaba en Google realizando prototipos y en el core del Framework de Meteor, hasta que pensó en otra forma de hacer una opción más fácil que abarcara las necesidades a la hora de hacer prototipos. Así surgió Vue en el 2014, desde entonces ha tenido una gran evolución y sigue creciendo en su versión 2.</p>
+        </section>
+        <section>
+          <h3>Características</h3>
+          <ul>
+            <li>Fácil de Aprender</li>
+            <li>Sistema de Data Binding</li>
+            <li>Sistema de Componentes</li>
+            <li>Reactivo</li>
+            <li>Optimizado: su core ocupa 74KB(Bastante Liviano)</li>
+            <li>Excelente Librería para hacer peticiones http, validación de formulario, etc.</li>
+            <li>Escalable</li>
+            <li>Licencia MIT</li>
+          </ul>
+        </section>
       </div>
     </div>
   </body>
